syntax = "proto3";
package fingerprint;

option go_package = "github.com/rpajarola/dedup/fingerprint";

message ExifTestCase {
	string source_file = 1;
	bool skip = 2;

	bool want_err = 3;
	string want_camera_model = 4;
	string want_camera_serial = 5;
	string want_photo_id = 6;
	bool want_unique_photo_id = 7;
	string want_photo_id_fp = 8;
	int32 want_photo_id_fp_quality = 9;
}
